fix h1 z-index

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,6 +88,8 @@ header {
 
 header h1 {
   margin-bottom: 185px;
+  position: relative;
+  z-index: 99;
 }
 
 header img {
